tests/ui/issues/issue-52262.stderr
error[E0507]: cannot move out of `*key` which is behind a shared reference
  --> $DIR/issue-52262.rs:15:35
   |
LL |                 String::from_utf8(*key).unwrap()
   |                                   ^^^^ move occurs because `*key` has type `Vec<u8>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
